--- a/views/index.slim
+++ b/views/index.slim
@@ -7,6 +7,8 @@ html
     link href='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css' rel='stylesheet'
     script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js' type='text/javascript'
     script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type='text/javascript'
+    link href='/vendor/js-emoji/emoji.css' rel='stylesheet'
+    script src="/vendor/js-emoji/emoji.js" type='text/javascript'
     script src='/application.js'
     scss:
       .emoji_char {
