--- a/views/index.slim
+++ b/views/index.slim
@@ -20,8 +20,10 @@ html
         list-style-type: none;
         padding-right: 20px;
         .char {
+          font-family: 'AppleColorEmoji';
         }
         .score {
+          padding-left: 10px;
         }
       }
       #tweets {
