--- a/views/index.slim
+++ b/views/index.slim
@@ -38,9 +38,11 @@ html
 
       section#rankings
         ul#data
+        br style="clear:both"
 
       hr clear="all"
+      hr
       footer
         p
-          | <strong>Wut?</strong>  this is an experiment tracking mentions of the phrases <code>dog dogs doggy doggie doggies puppy puppies cat cats kitty kittie kitties kitten kittens</code> on Twitter.  Built using Ruby, the Twitter Streaming API, Redis, CoffeeScript/jQuery and a little bit of Sinatra.  <a href="http://github.com/mroth/goodvsevil">Source on Github.</a>
+          | <strong>Wut?</strong>  this is some crazy emoji shit, description to go here.  <a href="#">Source on Github.</a>
 
