--- a/views/index.slim
+++ b/views/index.slim
@@ -1,48 +1,11 @@
-doctype html
-html
-  head
-    meta charset="utf-8"
-    title emojitracker
-    meta name="viewport" content="width=device-width, initial-scale=1.0"
-    link href='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css' rel='stylesheet'
-    script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js' type='text/javascript'
-    script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type='text/javascript'
-    link href='/vendor/js-emoji/emoji.css' rel='stylesheet'
-    script src="/vendor/js-emoji/emoji.js" type='text/javascript'
-    script src='/application.js'
-    scss:
-      .emoji_char {
-        width: 100px;
-        background-color: #eee;
-        margin: 1px;
-        padding: 3px;
-        float: left;
-        list-style-type: none;
-        padding-right: 20px;
-        .char {
-          font-family: 'AppleColorEmoji';
-        }
-        .score {
-          padding-left: 10px;
-        }
-      }
-      #tweets {
-        li {
-          color: gray;
-        }
-      }
-  body
+h1 emojitracker
 
-    div.container
-      h1 emojitracker
+section#rankings
+  ul#data
+  br style="clear:both"
 
-      section#rankings
-        ul#data
-        br style="clear:both"
-
-      hr clear="all"
-      hr
-      footer
-        p
-          | <strong>Wut?</strong>  this is some crazy emoji shit, description to go here.  <a href="#">Source on Github.</a>
-
+coffee:
+  $ ->
+    setTimeout(refreshUIFromServer, 1)
+    # startRefreshTimer()
+    startStreaming()
