force emoji font in safar

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -11,6 +11,9 @@ html
     script src="/vendor/js-emoji/emoji.js" type='text/javascript'
     script src='/application.js'
     scss:
+      .emoji {
+        font-family: 'AppleColorEmoji';
+      }
       .emoji_char {
         width: 100px;
         background-color: #eee;
