--- a/views/details.slim
+++ b/views/details.slim
@@ -13,7 +13,7 @@ section#details
       dd
         code = ":#{@emoji_char.short_name}:"
       dt current popularity
-      dd XX out of XY
+      dd = "\##{@emoji_char_rank}"
 
 section#tweets
   h3 most recent tweets
