--- a/views/layout.slim
+++ b/views/layout.slim
@@ -37,6 +37,10 @@ html
   body
 
     div.container
+      div.navbar
+        div.navbar-inner
+          a.brand href="/" emojitracker
+
       == yield
 
       hr clear="all"
