forget the scss lets just use a static file
one less thing to cache

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,31 +9,8 @@ html
     script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type='text/javascript'
     link href='/vendor/js-emoji/emoji.css' rel='stylesheet'
     script src="/vendor/js-emoji/emoji.js" type='text/javascript'
+    link href='/css/main.css' rel='stylesheet'
     script src='/application.js'
-    scss:
-      .emoji {
-        font-family: 'AppleColorEmoji';
-      }
-      .emoji_char {
-        width: 100px;
-        background-color: #eee;
-        margin: 1px;
-        padding: 3px;
-        float: left;
-        list-style-type: none;
-        padding-right: 20px;
-        .char {
-          font-family: 'AppleColorEmoji';
-        }
-        .score {
-          padding-left: 10px;
-        }
-      }
-      #tweets {
-        li {
-          color: gray;
-        }
-      }
   body
 
     div.container
