insanity to generate CSS maps for unicode

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,6 +9,7 @@ html
     / script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type='text/javascript'
     link href='/vendor/js-emoji/emoji.css' rel='stylesheet'
     script src="/vendor/js-emoji/emoji.js" type='text/javascript'
+    link href='/css/emoji_font.css' rel='stylesheet'
     link href='/css/main.css' rel='stylesheet'
     script src='/application.js'
   body
@@ -20,8 +21,8 @@ html
 
       == yield
 
-      hr clear="all"
-      footer
-        p
-          | <strong>Wut?</strong>  this is some crazy emoji shit, description to go here.  <a href="#">Source on Github.</a>
+      /hr clear="all"
+      /footer
+      /  p
+      /    | <strong>Wut?</strong>  this is some crazy emoji shit, description to go here.  <a href="#">Source on Github.</a>
 
