cleanup and attempt at some basic memcache

--- a/views/index.slim
+++ b/views/index.slim
@@ -5,5 +5,4 @@ section#rankings
 coffee:
   $ ->
     setTimeout(refreshUIFromServer, 1)
-    # startRefreshTimer()
-    startScoreStreaming()
+    setTimeout(startScoreStreaming, 10)
