--- a/views/layout.slim
+++ b/views/layout.slim
@@ -6,6 +6,7 @@ html
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     link href='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css' rel='stylesheet'
     script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js' type='text/javascript'
+    script src='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js' type='text/javascript'
     / script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type='text/javascript'
     link href='/vendor/js-emoji/emoji.css' rel='stylesheet'
     script src="/vendor/js-emoji/emoji.js" type='text/javascript'
