--- a/views/index.slim
+++ b/views/index.slim
@@ -25,7 +25,7 @@ div#detailview.modal.hide.fade
 coffee:
   @popDetails = (char_id) ->
     $.get("/api/details/#{char_id}", (response) ->
-      $('#detailview h3').text emoji.replace_unified(response.char) + " " + response.char_details.name
+      $('#detailview h3').html emoji.replace_unified(response.char) + " " + response.char_details.name
       $('#detailview #uid tt').text response.char_details.unified
       $('#detailview #shorthand code').text ":#{response.char_details.short_name}:"
       $('#detailview #rank').text "\##{response.popularity_rank}"
