--- a/views/index.slim
+++ b/views/index.slim
@@ -2,7 +2,7 @@ section#rankings
   ul#data
   br style="clear:both"
 
-div#detailview.modal.hide.fade
+div#detailview.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
   div.modal-header
     button.close type="button" data-dismiss="modal" aria-hidden="true" &times;
     h3 SUN WITH RAYS
