--- a/views/index.slim
+++ b/views/index.slim
@@ -16,7 +16,7 @@ div#detailview.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myMo
       dt popularity
       dd#rank.badge.badge-info #-
   div.modal-body
-    h4 recent tweets
+    h4 recent tweets (live)
     ul#tweet_list
   div.modal-footer
     a#openbtn.btn.btn-small href="#" target="new" open in new tab
