--- a/views/layout.slim
+++ b/views/layout.slim
@@ -4,7 +4,8 @@ html
     meta charset="utf-8"
     title emojitracker
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    link href='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css' rel='stylesheet'
+    link href='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css' rel='stylesheet'
+    link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet"
     script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js' type='text/javascript'
     script src='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js' type='text/javascript'
     link href='/vendor/js-emoji/emoji.css' rel='stylesheet'
