--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,6 +8,7 @@ html
     link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet"
     script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js' type='text/javascript'
     script src='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js' type='text/javascript'
+    script src='//platform.twitter.com/widgets.js' type='text/javascript'
     link href='/vendor/js-emoji/emoji.css' rel='stylesheet'
     script src="/vendor/js-emoji/emoji.js" type='text/javascript'
     link href='/css/emoji_font.css' rel='stylesheet'
@@ -22,7 +23,7 @@ html
         ul.nav.pull-right
           li.dropdown
             a.dropdown-toggle data-toggle="dropdown"
-              | &#9881;
+              i.icon-cogs
               b.caret
             ul.dropdown-menu
               li
