upgrade to slim 2.0
with bonus oj version bump

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -42,7 +42,7 @@ html
         p this is an experiment in realtime tracking of all emoji characters used on twitter.  it takes advantage of a number of technologies, notably the twitter streaming API, redis, SSE, and other good stuff.  If you're a nerd, you can <a href="#">fork the code on github</a> and make it better!
         p so yeah
         h4 like it? spread the word
-        p [buttons and shit here]
+        p buttons and shit here
       div.modal-footer
         span#byline.emojifont-restricted built with :heart: in nyc.  this is a <a href="http://rocketws.com" target="new">rocket workshop :rocket:</a> project.
 
