--- a/views/layout.slim
+++ b/views/layout.slim
@@ -4,19 +4,26 @@ html
     meta charset="utf-8"
     title emojitracker
     meta name="viewport" content="width=device-width, initial-scale=1.0"
+
+    /external libraries loaded via CDN
     link href='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css' rel='stylesheet'
-    link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet"
-    script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js' type='text/javascript'
+    link href='//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css' rel='stylesheet'
+    script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js' type='text/javascript'
     script src='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js' type='text/javascript'
     script src='//platform.twitter.com/widgets.js' type='text/javascript'
+
+    /vendored libraries (TODO: minify and move to CDN)
     link href='/vendor/js-emoji/emoji.css' rel='stylesheet'
     script src="/vendor/js-emoji/emoji.js" type='text/javascript'
+
+    /custom class, but should move to emojistatic before production
     link href='/css/emoji_font.css' rel='stylesheet'
+
+    /actual application stuff here
     link href='/css/main.css' rel='stylesheet'
     script src='/application.js'
-  body
 
-    / div.container
+  body
     div.navbar.navbar-static-top
       div.navbar-inner
         a.brand href="/" emojitracker
@@ -28,9 +35,6 @@ html
             ul.dropdown-menu
               li
                 a href="#aboutview" data-toggle="modal" About EmojiTracker
-              li
-                a href="#" poop
-
 
     == yield
 
@@ -39,10 +43,10 @@ html
         button.close type="button" data-dismiss="modal" aria-hidden="true" &times;
         h3.emojifont-restricted about emojitracker
       div.modal-body
-        p this is an experiment in realtime tracking of all emoji characters used on twitter.  it takes advantage of a number of technologies, notably the twitter streaming API, redis, SSE, and other good stuff.  If you're a nerd, you can <a href="#">fork the code on github</a> and make it better!
+        p this is an experiment in realtime tracking of all emoji characters used on twitter.  it takes advantage of a number of technologies, notably the twitter streaming API, redis, SSE, and other good stuff.  If you're a nerd, you can <a href="http://github.com/mroth/emojitrack">fork the code on github</a> and make it better!
         p so yeah
         h4 like it? spread the word
-        p buttons and shit here
+        p buttons and shit will go here
       div.modal-footer
         span#byline.emojifont-restricted built with :heart: in nyc.  this is a <a href="http://rocketws.com" target="new">rocket workshop :rocket:</a> project.
 
