--- a/views/details.slim
+++ b/views/details.slim
@@ -1,6 +1,6 @@
 div.container
 
-  h2.emojifont-restricted = @emoji_char.to_char
+  h2.emojifont-restricted = @emoji_char.char
 
   div.container-fluid
     div.row-fluid
