--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,9 +6,6 @@
   float: left;
   list-style-type: none;
   padding-right: 20px;
-  -webkit-transition: color 0.75s linear 0.1s, background-color 0.75s linear 0.1s;
-  -moz-transition: color 0.75s linear 0.1s, background-color 0.75s linear 0.1s;
-  transition: color 0.75s linear 0.1s, background-color 0.75s linear 0.1s;
   color: black;
 }
 .emoji_char > .char {
@@ -17,13 +14,21 @@
 .emoji_char > .score {
    padding-left: 10px;
 }
-.highlighted {
-  background-color: lightgreen;
-  color: red;
-  -webkit-transition: all 0s;
-  -moz-transition: all 0s;
-  transition: all 0s;
+.highlight_score_update {
+  -webkit-animation: highlight 0.75s linear 0.1s;
+  -moz-animation: highlight 0.75s linear 0.1s;
+  animation: highlight 0.75s linear 0.1s;
 }
+@-webkit-keyframes highlight {
+  from { color: red; background-color: lightgreen; }
+}
+@-moz-keyframes highlight {
+  from { color: red; background-color: lightgreen; }
+}
+@keyframes highlight {
+  from { color: red; background-color: lightgreen; }
+}
+
 .emoji_char:hover {
   -webkit-box-shadow: inset 0 0 30px pink;
   -moz-box-shadow: inset 0 0 30px pink;
