switch from css to scss

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -20,7 +20,7 @@ html
     link href='/css/emoji_font.css' rel='stylesheet'
 
     /actual application stuff here
-    link href='/css/main.css' rel='stylesheet'
+    link href='/assets/main.css' rel='stylesheet'
     script src='/application.js'
 
   body
