--- a/views/main.scss
+++ b/views/main.scss
@@ -75,3 +75,24 @@
 #byline {
   text-align: left;
 }
+
+/* imported from iamcal/emoji.css */
+span.emoji {
+  display: -moz-inline-box;
+  -moz-box-orient: vertical;
+  display: inline-block;
+  vertical-align: baseline;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  width: 1em;
+  height: 1em;
+  background-size: 1em;
+  background-repeat: no-repeat;
+  text-indent: -9999px;
+}
+img.emoji {
+  width: 1em;
+  height: 1em;
+}
+
