--- a/views/layout.slim
+++ b/views/layout.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta charset="utf-8"
-    title emojitracker
+    title emojitracker: realtime emoji usage on twitter
     meta name="viewport" content="width=device-width, initial-scale=1.0"
 
     /external libraries loaded via CDN
