nice live tweet indicator

--- a/views/index.slim
+++ b/views/index.slim
@@ -18,7 +18,9 @@ div#detailview.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myMo
       dt popularity
       dd#rank.badge.badge-info #-
   div.modal-body
-    h4 recent tweets (live)
+    h4
+      | live tweets&nbsp;
+      i.icon-refresh.icon-spin title="tweets are streaming live from twitter, no need to refresh"
     ul#tweet_list
   div.modal-footer
     span#tweetbtn
