--- a/views/main.scss
+++ b/views/main.scss
@@ -71,6 +71,9 @@
   font-size: 14px;
   margin-right: 4px;
 }
+.icon-refresh {
+  color: lightgray;
+}
 
 /* we want to stick the byline in a span and apply this so the text-indent in emoji-css works */
 #byline {
