first dump of tweet craziness pass
should have been carving this up but its 3am so oh well

--- a/views/details.slim
+++ b/views/details.slim
@@ -25,7 +25,7 @@ div.container
 
       section#tweets.span9
         h3 most recent tweets
-        ul#tweet_list
+        ul#tweet_list.icons-ul
 
 javascript:
   char_id = "#{@emoji_char.unified}";
