--- a/views/index.slim
+++ b/views/index.slim
@@ -21,7 +21,7 @@ div#detailview.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myMo
     h4
       | live tweets&nbsp;
       i.icon-refresh.icon-spin title="tweets are streaming live from twitter, no need to refresh"
-    ul#tweet_list
+    ul#tweet_list.icons-ul
   div.modal-footer
     span#tweetbtn
     a#jsonbtn.btn.btn-mini href="#" target="new"
