--- a/views/main.scss
+++ b/views/main.scss
@@ -54,7 +54,7 @@
   color: gray;
   background-color: transparent;
 }
-.styled_tweet a {
+.styled_tweet a.icon {
   color: gray;
   opacity: 0.3;
 }
