placeholder for favicon so i remember later

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -3,6 +3,7 @@ html
   head
     meta charset="utf-8"
     title emojitracker: realtime emoji use on twitter
+    /link rel="icon" type="image/png" href="http://mroth.github.io/emojistatic/images/32/1f4a9.png"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
 
     /external libraries loaded via CDN
