live tweet spinner on detail page too

--- a/views/details.slim
+++ b/views/details.slim
@@ -24,7 +24,9 @@ div.container
           li.icon-code &nbsp;get details as json
 
       section#tweets.span9
-        h3 most recent tweets
+        h3
+          | live tweets&nbsp;
+          i.icon-refresh.icon-spin title="tweets are streaming live from twitter, no need to refresh"
         ul#tweet_list.icons-ul
 
 javascript:
