add header on details page to match index

--- a/views/details.slim
+++ b/views/details.slim
@@ -1,6 +1,6 @@
 div.container
 
-  h2.emojifont-restricted = @emoji_char.char
+  h2.emojifont-restricted = @emoji_char.char + " " + @emoji_char.name
 
   div.container-fluid
     div.row-fluid
